@@ -58,6 +58,14 @@ previously been set. */
 #  define PCRE2POSIX_EXP_DEFN __declspec(dllexport)
 #endif
 
+/* Older versions of MSVC lack snprintf(). This define allows for
+warning/error-free compilation and testing with MSVC compilers back to at least
+MSVC 10/2010. Except for VC6 (which is missing some fundamentals and fails). */
+
+#if defined(_MSC_VER) && (_MSC_VER < 1900)
+#define snprintf _snprintf
+#endif
+
 
 /* Compile-time error numbers start at this value. It should probably never be
 changed. This #define is a copy of the one in pcre2_internal.h. */
